# advent-of-code-2024

./: .pre-commit-config.yaml  pyproject.toml
src/day01/: solution_1.py
src/day02/: solution.py
tests/: test_day01.py  test_day02.py
